--- a/src/client/sass/form.scss
+++ b/src/client/sass/form.scss
@@ -53,4 +53,8 @@ button{
     &:active{
         background-color: lighten($color: dodgerblue, $amount: 10);
     }
+
+    &:disabled{
+        background-color: grey;
+    }
 }
