--- a/src/client/sass/layout.scss
+++ b/src/client/sass/layout.scss
@@ -32,10 +32,19 @@ nav.navbar{
     float: left;
 }
 
-.loader>img{
-    margin: 0 auto;
-    width: 100px;
-    display: block;
+.loader{
+    position: absolute;
+    top: 100px;
+    left: 50%;
+
+    transform: translateX(-50%);
+
+    img{
+        margin: 0 auto;
+        width: 100px;
+        display: block;
+    }
+    
 }
 
 .middle{
